TODO: Test functions, write win condition.


19/09/30 12:11

Added noble collection function.
It needs testing properly, but it should work.

19/09/30 11:30

Player's card now counts towards what they can buy.


19/09/27 11:33

Added comprehensive token pick up function.
The function will reject any illegal pick up - red, red, green, or three reds, for example
As well as rejecting if you have too many tokens.

The previous task to change the table card setting function to use pop has been completed.

19/09/26 12:30

Adding in table deck system, and the ablility to remove cards from table's face up cards and replace them, which is combined with the purchase function.

Currently the card setting function uses random choice to extract 4 cards, and for some reason sometimes chooses cards not in the deck? Very odd error.
But in real life games you don't randomly take the cards, you take them from the top.
Thus, I can remove this random element here and hopefully remove this bug.

TODO: Change the card setting function to use .pop() and not .remove(). Don't use random.