@@ -3,6 +3,9 @@ import splendor_nobles as nobles
 import splendor_player as player
 import splendor_common as table
 import random
+import pygame
+from pygame.locals import *
+
 
 red, green, blue, white, black, yellow = 'red', 'green', 'blue', 'white', 'black', 'yellow'
 
@@ -26,21 +29,19 @@ random.shuffle(noblesDeck)
 tableNobles = noblesDeck[0:3]
 
 
-#Prepare face up cards
-faceUpLv1Cards, tableDeck1 = table.setFaceUpCards(deck1)
-
-
 player1 = player.player('Toby')
+player1Score = player1.getPrestige()
 
-player1.addToken(red, 5)
-player1.addToken(green, 5)
-player1.addToken(blue, 5)
-player1.addToken(white, 5)
-player1.addToken(black, 5)
 
-def testPrintCards(deck):
+### Game Mechanic Functions ###
+
+def printCards(deck):
     for card in deck:
-        print(card)
+        print(f'\t{card}')
+
+def printTokens(tokenSet):
+    for color in tokenSet.keys():
+        print(f'There are {tokenSet[color]} {color} tokens on the table.')
 
 def isCardPurchasePossible(player, card):
     cardRequirements = card.easyRequirements
@@ -90,7 +91,7 @@ def collectNoble(player, noblesDeck):
             if len(favoringNobles) == 1:
                 print(f'{player.name} has gained the favour of {favoringNobles[0].name}!')
                 player.addNoble(favoringNobles[0])
-                noblesDeck.pop(favoringNobles[0])
+                noblesDeck.pop(0)
                 return player, noblesDeck
             elif len(favoringNobles) > 1:
                 nobleNames = [noble.name for noble in favoringNobles]
@@ -102,7 +103,8 @@ def collectNoble(player, noblesDeck):
                 print('Enter the number of the noble you want to accept this turn.')
                 for number, noble in enumerate(nobleNames):
                     print(f'{number+1}: {noble}')
-                selectedNoble = int(input('...') -1)
+                selectedNoble = int(input('...')) -1
+                print(f'And so {favoringNobles[selectedNoble].name} gives you their favour this turn.')
                 player.addNoble(favoringNobles[selectedNoble])
                 noblesDeck.pop(selectedNoble)
                 return player, noblesDeck
@@ -112,54 +114,41 @@ def collectNoble(player, noblesDeck):
     else:
         print('The nobles are all spoken for.')
 
-# print(len(deck1))
-# tableLv1Cards = setTableCards(deck1)
-# print(len(deck1))
-# print(tableLv1Cards)
 
+### PYGAME FUNCTIONS ###
 
+# # Demo game loop:
+# print('Setting the table...')
 
-
-# # Testing the player purchase cards functions:
-
-print('The player has the following cards:')
-print(player1.cards)
-print('The player has the following tokens')
-print(player1.tokens)
-print('There are the following cards on the table:')
-for number, card in enumerate(faceUpLv1Cards):
-    print(f'\t{number}: {card}')
-print('The player will now buy a card.')
-player1, tableTokens, faceUpLv1Cards, tableDeck1 = purchaseCard(player1, faceUpLv1Cards[1], tableTokens, faceUpLv1Cards, tableDeck1)
-print('The player now has the following cards:')
-print(player1.cards)
-print('And the following tokens.')
-print(player1.tokens)
-print('And now the face up cards are as follows:')
-for number, card in enumerate(faceUpLv1Cards):
-    print(f'\t{number}: {card}')
-
-print("The player's card buying power is now:")
-print(player1.getCardCount())
-print("And the player's total buying power is now:")
-print(player1.getCombinedWallet())
-print(f'The player has {player1.getPrestige()} points now.')
-print('Cheating a noble into the player inventory:')
-player1.addNoble(tableNobles[1])
-player1.addNoble(tableNobles[0])
-print(player1.nobles)
-print(player1.getPrestige())
-
-#Testing the player picking up tokens functions
-
-# print('The player currently has:')
-# print(player1.tokens)
-# player1, tableTokens = table.pickUpTokens(player1, tableTokens, red, red)
-# print('The player now has:')
-# print(player1.tokens)
-# print('And there are now the following tokens on the table:')
-# print(tableTokens)
-
-# print('The nobles present in this game are:')
+# faceUpLv1Cards, tableDeck1 = table.setFaceUpCards(deck1)
+# faceUpLv2Cards, tableDeck2 = table.setFaceUpCards(deck2)
+# faceUpLv3Cards, tableDeck3 = table.setFaceUpCards(deck3)
+# print('The nobles on the table are:')
 # for noble in tableNobles:
-#     print(f'\t{noble.name}')
+#     print(f'\t{noble}')
+
+# while player1Score < 15:
+#     roundCounter = 1
+#     print('-'*100)
+#     print(f'It is round {roundCounter}.\n')
+#     printTokens(tableTokens)
+#     print('The cards on the table are as follows:')
+#     print('The level 1 cards available are:')
+#     printCards(faceUpLv1Cards)
+#     print('The level 2 cards available are:')
+#     printCards(faceUpLv2Cards)
+#     print('And the level 3 cards available are:')
+#     printCards(faceUpLv3Cards)
+    
+
+
+
+
+
+
+
+
+
+
+
+
